--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1224,6 +1224,7 @@
     <Compile Include="Products\Import\FailedProductImportException.cs" />
     <Compile Include="Products\Import\IImportProductsResult.cs" />
     <Compile Include="Products\ProductSelectionChangedEventArgs.cs" />
+    <Compile Include="UI\Controls\WeightChangedEventArgs.cs" />
     <Compile Include="Warehouse\Configuration\Carriers\BaseCarrierSetup.cs" />
     <Compile Include="Warehouse\Configuration\Carriers\DhlCarrierSetup.cs" />
     <Compile Include="Warehouse\Configuration\Carriers\EndiciaCarrierSetup.cs" />
