WORKS-1490: Use cubiscan configuration in DB

--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -254,7 +254,9 @@
     <Compile Include="IInterapptiveOnly.cs" />
     <Compile Include="InterapptiveOnlyWrapper.cs" />
     <Compile Include="IO\FileSelector.cs" />
+    <Compile Include="IO\Hardware\ICubiscanConfigurationManager.cs" />
     <Compile Include="IO\Hardware\IVirtualKeyboard.cs" />
+    <Compile Include="IO\Hardware\Scales\CubiscanConfiguration.cs" />
     <Compile Include="IO\Hardware\Scales\IScaleReader.cs" />
     <Compile Include="IO\Hardware\Scales\ScaleCubiscanReader.cs" />
     <Compile Include="IO\Hardware\Scales\ScaleReaderWrapper.cs" />
