WORKS-1490: Create ManagerBase abstract class for this and future managers. Also, lots of comments

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -933,6 +933,7 @@
     <Compile Include="Common\IO\Hardware\Printers\PrintUtilityWrapper.cs" />
     <Compile Include="AutoInstall\AutoInstaller.cs" />
     <Compile Include="AutoInstall\AutoInstallerExitCodes.cs" />
+    <Compile Include="Common\ManagerBase.cs" />
     <Compile Include="Common\Net\RestSharpJsonNetSerializer.cs" />
     <Compile Include="Common\Threading\BackgroundExecutorWithoutDialog.cs" />
     <Compile Include="Common\Threading\BackgroundProgressProvider.cs" />
