WORKS-1490: Move interface implementations of ManagerBase to DeviceManager. Added unit test to make sure I don't forget.

--- a/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
+++ b/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
@@ -310,6 +310,7 @@
     <Compile Include="ApplicationCore\Security\LicenseEncryptionProviderTest.cs" />
     <Compile Include="Common\KeyboardShortcuts\KeyboardShortcutKeyFilterTest.cs" />
     <Compile Include="Common\KeyboardShortcuts\ShortcutSessionTest.cs" />
+    <Compile Include="Common\ManagerBaseTest.cs" />
     <Compile Include="Core\AssemblyDateTests.cs" />
     <Compile Include="Core\Certificates\ClientCertificateTests.cs" />
     <Compile Include="Core\EnumTest.cs" />
