--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -250,6 +250,7 @@
     </Compile>
     <Compile Include="Controls\ShipmentDetails\FedExShipmentDetailsViewModel.cs" />
     <Compile Include="Controls\ShipmentDetails\GenericMultiPackageShipmentDetailsViewModel.cs" />
+    <Compile Include="Controls\ShipmentDetails\GenericSinglePackageShipmentDetailsViewModel.cs" />
     <Compile Include="Controls\ShipmentDetails\ICarrierShipmentAdapterOptionsProvider.cs" />
     <Compile Include="Controls\Reference\GenericReferenceViewModel.cs" />
     <Compile Include="Controls\Reference\UpsReferenceControl.xaml.cs">
@@ -368,7 +369,6 @@
     <Compile Include="ScanToShip\ScanToShipTab.cs" />
     <Compile Include="ScanToShip\ScanToShipTabItem.cs" />
     <Compile Include="ScanToShip\ScanToShipViewModel.cs" />
-    <Compile Include="ShipmentModelPipelines\ChangeDimensionsPipeline.cs" />
     <Compile Include="ShipmentModelPipelines\CreateLabelShortcutPipeline.cs" />
     <Compile Include="OrderLookupModule.cs" />
     <Compile Include="OrderLookupPanelFactory.cs" />
