WORKS-1490: Create Cubiscan Settings UI.

--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -223,6 +223,10 @@
       <DependentUpon>ApiSettingsHost.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\Settings\Api\ApiSettingsViewModel.cs" />
+    <Compile Include="Controls\Settings\Cubiscan\CubiscanDeviceEditorDialog.xaml.cs">
+      <DependentUpon>CubiscanDeviceEditorDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Settings\Cubiscan\CubiscanDeviceEditorViewModel.cs" />
     <Compile Include="Controls\Settings\Cubiscan\CubiscanSettingsControl.xaml.cs">
       <DependentUpon>CubiscanSettingsControl.xaml</DependentUpon>
     </Compile>
@@ -233,6 +237,8 @@
       <DependentUpon>CubiscanSettingsHost.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\Settings\Cubiscan\CubiscanSettingsViewModel.cs" />
+    <Compile Include="Controls\Settings\Cubiscan\ICubiscanDeviceEditorViewModel.cs" />
+    <Compile Include="Controls\Settings\Cubiscan\ICubiscanSettingsViewModel.cs" />
     <Compile Include="Controls\Settings\DesignModeWarehouseListViewModel.cs" />
     <Compile Include="Controls\Settings\DesignModeWarehouseSettingsViewModel.cs" />
     <Compile Include="Controls\Settings\WarehouseListDialog.xaml.cs">
@@ -426,6 +432,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\Settings\Cubiscan\CubiscanDeviceEditorDialog.xaml" />
     <Page Include="Controls\Settings\Cubiscan\CubiscanSettingsControl.xaml" />
     <Page Include="Controls\Settings\WarehouseListDialog.xaml">
       <SubType>Designer</SubType>
