--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -280,7 +280,9 @@
     <Compile Include="Net\IHttpRequestSubmitter.cs" />
     <Compile Include="Net\IHttpVariableCollection.cs" />
     <Compile Include="Net\IHttpVariableRequestSubmitter.cs" />
+    <Compile Include="Net\IHttpValidator.cs" />
     <Compile Include="Net\IWebHelper.cs" />
+    <Compile Include="Net\HttpValidator.cs" />
     <Compile Include="Net\RestSharp\IRestClientFactory.cs" />
     <Compile Include="Net\RestSharp\IRestRequestFactory.cs" />
     <Compile Include="Net\RestSharp\RestClientFactory.cs" />
