--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -927,6 +927,7 @@
     <Compile Include="ApplicationCore\MainForm.BasicUIHeartbeat.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Common\IManagerBase.cs" />
     <Compile Include="Common\IO\Hardware\CubiscanConfigurationManager.cs" />
     <Compile Include="Common\IO\Hardware\DeviceManager.cs" />
     <Compile Include="Common\IO\Hardware\IDeviceManager.cs" />
