--- a/Code/Interapptive.Shared.Tests/Interapptive.Shared.Tests.csproj
+++ b/Code/Interapptive.Shared.Tests/Interapptive.Shared.Tests.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Extensions\DecimalExtensionsTest.cs" />
     <Compile Include="Extensions\TaskExtensionsTest.cs" />
     <Compile Include="Filters\FilterTestingHelper.cs" />
+    <Compile Include="Net\HttpValidatorTest.cs" />
     <Compile Include="Net\HttpVariableCollectionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\AesStreamEncryptionProviderTest.cs" />
