WORKS-1854: Remove code around changing store license key. Only allow SFP shipments for accounts/stores not in trial. Update messaging around using insurance with trials to include new account page url.

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -434,6 +434,7 @@
     <Compile Include="Services\IAutoReturnShipmentService.cs" />
     <Compile Include="Services\IScanPackOrderValidator.cs" />
     <Compile Include="Services\ProcessShipmentsWorkflow\SerialProcessShipmentsWorkflow.cs" />
+    <Compile Include="Services\ShipmentProcessorSteps\LabelRetrieval\AmazonSfpValidator.cs" />
     <Compile Include="Services\ShippingProfileRepository.cs" />
     <Compile Include="Services\ArchiveRatesRetrieverService.cs" />
     <Compile Include="Profiles\BaseShippingProfileApplicationStrategy.cs" />
