--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -794,6 +794,8 @@
     <Compile Include="Api\IApiPortRegistrationService.cs" />
     <Compile Include="Api\IApiService.cs" />
     <Compile Include="ApplicationCore\CommandLineOptions\AutoUpgradeFailureSubmitter.cs" />
+    <Compile Include="ApplicationCore\Dashboard\Content\DashboardAccountTrialItem.cs" />    
+    <Compile Include="ApplicationCore\Licensing\TrialDetails.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\DTO\SqlConfigChangedDto.cs" />
     <Compile Include="ApplicationCore\Settings\ICubiscanSettingsPage.cs" />
     <Compile Include="AutoInstall\DTO\AutoInstallShipWorksDto.cs" />
@@ -5182,7 +5184,7 @@
     <Compile Include="ApplicationCore\Dashboard\DashboardActionMethod.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardServerMessageItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardLocalMessageItem.cs" />
-    <Compile Include="ApplicationCore\Dashboard\Content\DashboardTrialItem.cs" />
+    <Compile Include="ApplicationCore\Dashboard\Content\DashboardLegacyStoreTrialItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardOnlineVersionItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\ShipWorksOnlineVersionChecker.cs" />
     <Compile Include="ApplicationCore\Interaction\DockingPanelContentHolder.cs">
@@ -7115,7 +7117,6 @@
     <Compile Include="ApplicationCore\Licensing\MessageBoxes\NeedMeteredLicenseDlg.Designer.cs">
       <DependentUpon>NeedMeteredLicenseDlg.cs</DependentUpon>
     </Compile>
-    <Compile Include="ApplicationCore\Licensing\TrialDetail.cs" />
     <Compile Include="ApplicationCore\Logging\ApiLogEntry.cs" />
     <Compile Include="ApplicationCore\Logging\ApiPrivateLogSourceAttribute.cs" />
     <Compile Include="Common\Threading\ProgressProvider.cs" />
