--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -794,7 +794,8 @@
     <Compile Include="Api\IApiPortRegistrationService.cs" />
     <Compile Include="Api\IApiService.cs" />
     <Compile Include="ApplicationCore\CommandLineOptions\AutoUpgradeFailureSubmitter.cs" />
-    <Compile Include="ApplicationCore\Dashboard\Content\DashboardAccountTrialItem.cs" />    
+    <Compile Include="ApplicationCore\Dashboard\Content\DashboardAccountTrialItem.cs" />
+    <Compile Include="ApplicationCore\Dashboard\Content\DashboardTrialItem.cs" />    
     <Compile Include="ApplicationCore\Licensing\TrialDetails.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\DTO\SqlConfigChangedDto.cs" />
     <Compile Include="ApplicationCore\Settings\ICubiscanSettingsPage.cs" />
