--- a/Code/ShipWorks.Stores/packages.config
+++ b/Code/ShipWorks.Stores/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
+  <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net46" />
   <package id="Quartz" version="2.5.0" targetFramework="net46" />
   <package id="Rebex.Common" version="2.5.6755" targetFramework="net46" />
   <package id="Rebex.Ftp" version="4.0.6755" targetFramework="net46" />
@@ -21,7 +22,9 @@
   <package id="RestSharp" version="106.6.9" targetFramework="net46" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.2" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net46" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net46" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net46" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net46" />
@@ -29,6 +32,7 @@
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net46" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net46" />
   <package id="System.Runtime.Analyzers" version="1.1.0" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net46" />
   <package id="System.Runtime.InteropServices.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Hashing.Algorithms.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
