--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -312,6 +312,9 @@
     <Compile Include="Security\EncryptionException.cs" />
     <Compile Include="Security\IDatabaseSpecificCipherKey.cs" />
     <Compile Include="Security\IDatabaseSpecificEncryptionProvider.cs" />
+    <Compile Include="Security\SecureTextVersions\SecureTextBase.cs" />
+    <Compile Include="Security\SecureTextVersions\SecureTextVersion0.cs" />
+    <Compile Include="Security\SecureTextVersions\SecureTextVersion1.cs" />
     <Compile Include="Security\StreamCipherKey.cs" />
     <Compile Include="Security\ICipherKey.cs" />
     <Compile Include="Security\IEncryptionProvider.cs" />
