--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -796,7 +796,7 @@
     <Compile Include="ApplicationCore\CommandLineOptions\AutoUpgradeFailureSubmitter.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardAccountTrialItem.cs" />
     <Compile Include="ApplicationCore\Dashboard\Content\DashboardTrialItem.cs" />
-    <Compile Include="ApplicationCore\Licensing\CustomerLicenseKeyType.cs" />    
+    <Compile Include="ApplicationCore\Licensing\CustomerLicenseKeyType.cs" />
     <Compile Include="ApplicationCore\Licensing\TrialDetails.cs" />
     <Compile Include="ApplicationCore\Licensing\Warehouse\DTO\SqlConfigChangedDto.cs" />
     <Compile Include="ApplicationCore\Settings\ICubiscanSettingsPage.cs" />
@@ -1608,6 +1608,7 @@
     <Compile Include="Warehouse\Configuration\Stores\IStoreSetup.cs" />
     <Compile Include="Warehouse\Configuration\Stores\BaseStoreSetup.cs" />
     <Compile Include="Warehouse\Configuration\Stores\ThreeDCartStoreSetup.cs" />
+    <Compile Include="Warehouse\Configuration\TaxIdentifiers\DTO\TaxIdentifierConfiguration.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseGetOrdersResponse.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseImportDetails.cs" />
     <Compile Include="Users\IUserManager.cs" />
