--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1235,7 +1235,7 @@
     <Compile Include="Products\Import\FailedProductImportException.cs" />
     <Compile Include="Products\Import\IImportProductsResult.cs" />
     <Compile Include="Products\ProductSelectionChangedEventArgs.cs" />
-    <Compile Include="Shipping\Carriers\FedEx\Enums\FedexTinType.cs" />
+    <Compile Include="Shipping\Carriers\FedEx\Enums\FedexTINType.cs" />
     <Compile Include="Stores\ILegacyStoreTrialKeyConverter.cs" />
     <Compile Include="UI\Controls\WeightChangedEventArgs.cs" />
     <Compile Include="Users\ComputerManagerWrapper.cs" />
@@ -1609,7 +1609,6 @@
     <Compile Include="Warehouse\Configuration\Stores\IStoreSetup.cs" />
     <Compile Include="Warehouse\Configuration\Stores\BaseStoreSetup.cs" />
     <Compile Include="Warehouse\Configuration\Stores\ThreeDCartStoreSetup.cs" />
-    <Compile Include="Warehouse\Configuration\TaxIdentifiers\DTO\TaxIdentifierConfiguration.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseGetOrdersResponse.cs" />
     <Compile Include="Warehouse\Orders\DTO\WarehouseImportDetails.cs" />
     <Compile Include="Users\IUserManager.cs" />
