--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -583,6 +583,7 @@
     <Compile Include="Actions\Scheduling\SchedulingException.cs" />
     <Compile Include="Actions\ActionTaskChangingEventArgs.cs" />
     <Compile Include="Actions\Tasks\ActionTaskCategory.cs" />
+    <Compile Include="Actions\Tasks\IActionTaskFactory.cs" />
     <Compile Include="Actions\Tasks\ActionTaskFlowInfoControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1236,6 +1237,9 @@
     <Compile Include="Products\Import\IImportProductsResult.cs" />
     <Compile Include="Products\ProductSelectionChangedEventArgs.cs" />
     <Compile Include="Stores\ILegacyStoreTrialKeyConverter.cs" />
+    <Compile Include="Stores\Platforms\Platform\OnlineUpdating\IPlatformOnlineUpdater.cs" />
+    <Compile Include="Stores\Platforms\Platform\OnlineUpdating\PlatformOnlineUpdater.cs" />
+    <Compile Include="Stores\Platforms\Platform\PlatformStoreException.cs" />
     <Compile Include="UI\Controls\WeightChangedEventArgs.cs" />
     <Compile Include="Users\ComputerManagerWrapper.cs" />
     <Compile Include="Users\IComputerManager.cs" />
@@ -1598,11 +1602,13 @@
     <Compile Include="Warehouse\Configuration\HubConfigurationSynchronizer.cs" />
     <Compile Include="Warehouse\Configuration\HubConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\IHubConfigurator.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\ActionTaskConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\Stores\DTO\StoreConfiguration.cs" />
     <Compile Include="Warehouse\Configuration\Stores\DTO\StoreSynchronization.cs" />
     <Compile Include="Warehouse\Configuration\Stores\HubStoreConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\Stores\HubStoreImporter.cs" />
     <Compile Include="Warehouse\Configuration\Stores\HubStoreSynchronizer.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\IActionTaskConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\Stores\IHubStoreConfigurator.cs" />
     <Compile Include="Warehouse\Configuration\Stores\IHubStoreSynchronizer.cs" />
     <Compile Include="Warehouse\Configuration\Stores\IStoreSetup.cs" />
