WORKS-2193: Add PlatformStoreSetup

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Platforms\Platform\CoreExtensions\Actions\PlatformShipmentUploadTask.cs" />
     <Compile Include="Platforms\Platform\OnlineUpdating\PlatformOnlineUpdateCommandCreator.cs" />
     <Compile Include="Platforms\Platform\PlatformStoreDowloader.cs" />
+    <Compile Include="Platforms\Platform\PlatformStoreSetup.cs" />
     <Compile Include="Platforms\Platform\PlatformWarehouseOrderFactory.cs" />
     <Compile Include="Platforms\Platform\PlatformStoreType.cs" />
     <Compile Include="Platforms\Rakuten\Content\RakutenCombineOrderAction.cs" />
