--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Platforms\Odbc\Warehouse\OdbcStoreClient.cs" />
     <Compile Include="Platforms\Odbc\Warehouse\OdbcStoreDtoFactory.cs" />
     <Compile Include="Services\LegacyStoreTrialKeyConverter.cs" />
+    <Compile Include="Warehouse\Configuration\Stores\ActionTaskConfigurator.cs" />
     <Compile Include="Warehouse\IStoreDtoHelpers.cs" />
     <Compile Include="Platforms\AmeriCommerce\AmeriCommerceCombineOrderNumberSearchProvider.cs" />
     <Compile Include="Platforms\AmeriCommerce\AmeriCommerceWebClient.cs" />
