WORKS-2862: cherry-pick USPS update

--- a/Code/ShipWorks.ThirdPartyApi/App.config
+++ b/Code/ShipWorks.ThirdPartyApi/App.config
@@ -50,8 +50,13 @@
   </runtime>
   <applicationSettings>
     <ShipWorks.Properties.Settings>
-      <setting name="ShipWorks_ThirdPartyApi_Shipping_Carriers_FedEx_WebServices_UploadDocument_UploadDocumentService" serializeAs="String">
+      <setting name="ShipWorks_ThirdPartyApi_Shipping_Carriers_FedEx_WebServices_UploadDocument_UploadDocumentService"
+        serializeAs="String">
         <value>https://wsbeta.fedex.com:443/web-services/uploaddocument</value>
+      </setting>
+      <setting name="ShipWorks_ThirdPartyApi_Shipping_Carriers_Postal_Usps_WebServices_SwsimV111"
+        serializeAs="String">
+        <value>https://swsim.stamps.com/swsim/swsimv111.asmx</value>
       </setting>
     </ShipWorks.Properties.Settings>
   </applicationSettings>
