--- a/Code/ShipWorks.Shipping.Specs/ShipWorks.Shipping.Specs.csproj
+++ b/Code/ShipWorks.Shipping.Specs/ShipWorks.Shipping.Specs.csproj
@@ -100,6 +100,7 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
