--- a/Code/ShipWorks.ThirdPartyApi/ShipWorks.ThirdPartyApi.csproj
+++ b/Code/ShipWorks.ThirdPartyApi/ShipWorks.ThirdPartyApi.csproj
@@ -192,8 +192,8 @@
     <Compile Include="..\ShipWorks\Properties\AssemblyInfoCommon.cs">
       <Link>Properties\AssemblyInfoCommon.cs</Link>
     </Compile>
-    <Compile Include="Custom\Shipping\Carriers\Postal\Usps\Net\IExtendedSwsimV90.cs" />
-    <Compile Include="Custom\Shipping\Carriers\Postal\Usps\Net\SwsimV90.cs" />
+    <Compile Include="Custom\Shipping\Carriers\Postal\Usps\Net\IExtendedSwsimV111.cs" />
+    <Compile Include="Custom\Shipping\Carriers\Postal\Usps\Net\SwsimV111.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -209,14 +209,14 @@
     <Compile Include="Shipping\Carriers\Postal\Usps\Net\AccountInfoResult.cs" />
     <Compile Include="Shipping\Carriers\Postal\Usps\Net\CreateEnvelopeIndiciumParameters.cs" />
     <Compile Include="Shipping\Carriers\Postal\Usps\Net\ISwimFinishAccountVerification.cs" />
+    <Compile Include="Shipping\Carriers\Postal\Usps\Net\ISwsimV111.cs" />
+    <Compile Include="Shipping\Carriers\Postal\Usps\Net\ISwsimV111.Implementation.cs" />
     <Compile Include="Shipping\Carriers\Postal\Usps\Net\SwsimFinishAccountVerification.cs" />
     <Compile Include="Shipping\Carriers\UPS\Api\WebServices\OpenAccount\BillingAddressType.cs" />
     <Compile Include="Shipping\Carriers\UPS\Api\WebServices\OpenAccount\IAddressType.cs" />
     <Compile Include="Shipping\Carriers\UPS\Api\WebServices\OpenAccount\PickupAddressType.cs" />
     <Compile Include="Shipping\Carriers\Postal\Usps\Net\CreateIndiciumParameters.cs" />
     <Compile Include="Shipping\Carriers\Postal\Usps\Net\CreateIndiciumResult.cs" />
-    <Compile Include="Shipping\Carriers\Postal\Usps\Net\ISwsimV90.cs" />
-    <Compile Include="Shipping\Carriers\Postal\Usps\Net\ISwsimV90.Implementation.cs" />
     <Compile Include="Web References\ApplicationCore.Licensing.Activation.WebServices\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -282,6 +282,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
+    <Compile Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
     <Compile Include="Web References\Shipping.Carriers.UPS.WebServices.OpenAccount\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -339,11 +344,6 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
     <Compile Include="Web References\Shipping.Carriers.Postal.Express1.WebServices.LabelService\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.map</DependentUpon>
-    </Compile>
-    <Compile Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
@@ -807,13 +807,16 @@
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices.v36\TrackingEvent.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\AccountInfoV41.datasource">
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\AccountInfoV54.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\Address.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\AddressVerificationLevel.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\Branding.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\CarrierPickupInformation.datasource">
@@ -867,16 +870,23 @@
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\PurchaseStatus.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\RateV33.datasource">
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\RateV40.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\RegistrationStatus.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\ReprintIndiciumResponse.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\ResidentialDeliveryIndicatorType.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\ShipmentV27.datasource">
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\ShipmentV32.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\StatusCodes.datasource">
@@ -885,7 +895,7 @@
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\StoreShippingMethodOption.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\swsimv90.wsdl" />
+    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\swsimv111.wsdl" />
     <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\TrackingEvent.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
@@ -1867,11 +1877,6 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <None Include="Web References\Stores.Platforms.ChannelAdvisor.WebServices.Shipping\ShippingService.wsdl" />
-    <None Include="Web References\Shipping.Carriers.Postal.Usps.WebServices\Reference.map">
-      <Generator>MSDiscoCodeGenerator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Web References\Stores.Platforms.Ebay.WebServices\RelistFixedPriceItemResponseType.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
@@ -2061,6 +2066,17 @@
     <WebReferences Include="Web References\" />
   </ItemGroup>
   <ItemGroup>
+    <WebReferenceUrl Include="https://swsim.stamps.com/swsim/swsimv111.asmx%3fwsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\Shipping.Carriers.Postal.Usps.WebServices\</RelPath>
+      <UpdateFromURL>https://swsim.stamps.com/swsim/swsimv111.asmx%3fwsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>ShipWorks_ThirdPartyApi_Shipping_Carriers_Postal_Usps_WebServices_SwsimV111</CachedSettingsPropName>
+    </WebReferenceUrl>
     <WebReferenceUrl Include="\\intfs01\development\Partners\Shipping\FedEx\FedEx 2017 Certification\vWS Software 2017\2017 WSDLs\OpenShipService_v13.wsdl">
       <UrlBehavior>Static</UrlBehavior>
       <RelPath>Web References\Shipping.Carriers.FedEx.WebServices.OpenShip\</RelPath>
@@ -2324,17 +2340,6 @@
       </CachedDynamicPropName>
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>ShipWorks_Shipping_Carriers_FedEx_WebServices_AddressValidation_AddressValidationService</CachedSettingsPropName>
-    </WebReferenceUrl>
-    <WebReferenceUrl Include="C:\Users\jackerman\ShipWorks\Code\ShipWorks\Shipping\Carriers\Postal\Usps\Wsdl\swsimv90.wsdl">
-      <UrlBehavior>Static</UrlBehavior>
-      <RelPath>Web References\Shipping.Carriers.Postal.Usps.WebServices\</RelPath>
-      <UpdateFromURL>C:\Users\jackerman\ShipWorks\Code\ShipWorks\Shipping\Carriers\Postal\Usps\Wsdl\swsimv90.wsdl</UpdateFromURL>
-      <ServiceLocationURL>
-      </ServiceLocationURL>
-      <CachedDynamicPropName>
-      </CachedDynamicPropName>
-      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
-      <CachedSettingsPropName>ShipWorks_Shipping_Carriers_Postal_Stamps_WebServices_swsim_v1</CachedSettingsPropName>
     </WebReferenceUrl>
     <WebReferenceUrl Include="http://developer.ebay.com/webservices/latest/ebaySvc.wsdl">
       <UrlBehavior>Static</UrlBehavior>
