--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -213,8 +213,8 @@
     <Compile Include="Controls\MainGrid\MainGridHeader.xaml.cs">
       <DependentUpon>MainGridHeader.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\Settings\Api\PlatformSettingsControl.xaml.cs">
-      <DependentUpon>PlatformSettingsControl.xaml</DependentUpon>
+    <Compile Include="Controls\Settings\Api\ApiSettingsControl.xaml.cs">
+      <DependentUpon>ApiSettingsControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Settings\Api\ApiSettingsHost.cs">
       <SubType>UserControl</SubType>
@@ -428,7 +428,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Controls\Settings\Api\PlatformSettingsControl.xaml">
+    <Page Include="Controls\Settings\Api\ApiSettingsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
