WORKS-2038: Indent ScanPackItemControl when it is a bundled item. Show when a bundle is currently incomplete.

--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -338,6 +338,7 @@
       <DependentUpon>ItemsToScanControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ScanPack\IVerifiedOrderService.cs" />
+    <Compile Include="ScanPack\ScanPackItemQuantityConverter.cs" />
     <Compile Include="ScanPack\VerifiedControl.cs">
       <DependentUpon>VerifiedControl.xaml</DependentUpon>
     </Compile>
