--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -244,7 +244,10 @@
     <Compile Include="Enums\AsendiaServiceType.cs" />
     <Compile Include="Enums\BigCommerceAuthenticationType.cs" />
     <Compile Include="Enums\CombineSplitStatusType.cs" />
+    <Compile Include="Enums\CustomsTinIssuingAuthority.cs" />
+    <Compile Include="Enums\TaxIdType.cs" />
     <Compile Include="Enums\ShopSiteAuthenticationType.cs" />
+    <Compile Include="Enums\CustomsRecipientEntityType.cs" />
     <Compile Include="Enums\UnitType.cs" />
     <Compile Include="Extensions\CharExtensions.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
