--- a/Code/ShipWorks.Executable/packages.config
+++ b/Code/ShipWorks.Executable/packages.config
@@ -9,6 +9,7 @@
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net46" />
   <package id="Desktop.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="InterapptiveAnalyzers" version="1.0.5714.23531" targetFramework="net46" />
+  <package id="JsonSubTypes" version="1.2.0" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="Microsoft.AnalyzerPowerPack" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net46" />
@@ -19,6 +20,7 @@
   <package id="SD.Tools.Algorithmia" version="1.2.1" targetFramework="net46" />
   <package id="SD.Tools.BCLExtensions" version="1.1.1" targetFramework="net46" />
   <package id="SD.Tools.OrmProfiler.Interceptor" version="1.5.20150715" targetFramework="net46" />
+  <package id="ShipEngine.CarrierApi.Client" version="1.2.1" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
   <package id="Syncfusion.Shared.WPF46" version="15.4.0.17" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
