--- a/Code/ShipWorks.Shipping.Tests/packages.config
+++ b/Code/ShipWorks.Shipping.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
   <package id="Desktop.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="InterapptiveAnalyzers" version="1.0.5714.23531" targetFramework="net46" />
+  <package id="JsonSubTypes" version="1.2.0" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="Microsoft.AnalyzerPowerPack" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net46" />
@@ -13,6 +14,7 @@
   <package id="Moq" version="4.7.145" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.2" targetFramework="net46" />
+  <package id="ShipEngine.CarrierApi.Client" version="1.2.1" targetFramework="net46" />
   <package id="Signed.ShipEngine.ApiClient" version="1.1.3" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
   <package id="Syncfusion.Compression.Base46" version="16.1.0.26" targetFramework="net46" />
