--- a/Code/ShipWorks.Products.UI/packages.config
+++ b/Code/ShipWorks.Products.UI/packages.config
@@ -3,8 +3,9 @@
   <package id="Autofac" version="4.6.2" targetFramework="net46" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
-  <package id="Syncfusion.Licensing" version="16.3.0.36" targetFramework="net46" />
-  <package id="Syncfusion.SfInput.WPF" version="16.3.0.36" targetFramework="net46" />
-  <package id="Syncfusion.SfShared.WPF" version="16.3.0.36" targetFramework="net46" />
-  <package id="Syncfusion.Shared.WPF46" version="15.4.0.20" targetFramework="net46" />
+  <package id="Syncfusion.Licensing" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.SfInput.WPF" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.SfShared.WPF" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF46" version="16.1.0.26" targetFramework="net46" />
 </packages>
