--- a/Code/ShipWorks/packages.config
+++ b/Code/ShipWorks/packages.config
@@ -54,16 +54,18 @@
   <package id="Signed.ShipEngine.ApiClient" version="1.1.3" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
   <package id="Syncfusion.Compression.Base46" version="16.1.0.26" targetFramework="net46" />
-  <package id="Syncfusion.Grid.Base" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.Grid.Windows" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.Licensing" version="16.3.0.36" targetFramework="net46" />
-  <package id="Syncfusion.SfInput.WPF" version="16.3.0.29" targetFramework="net46" />
-  <package id="Syncfusion.SfShared.WPF" version="16.3.0.29" targetFramework="net46" />
-  <package id="Syncfusion.Shared.Base" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.Shared.Windows" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.SpellChecker.Base" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.Tools.Base" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.Tools.Windows" version="16.1.0.32" targetFramework="net46" />
+  <package id="Syncfusion.Grid.Base" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Grid.Windows" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Licensing" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.SfInput.WPF" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.SfShared.WPF" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Shared.Base" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Shared.Windows" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF46" version="16.1.0.26" targetFramework="net46" />
+  <package id="Syncfusion.SpellChecker.Base" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Tools.Base" version="16.4.0.52" targetFramework="net46" />
+  <package id="Syncfusion.Tools.Windows" version="16.4.0.52" targetFramework="net46" />
   <package id="Syncfusion.XlsIO.Base46" version="16.1.0.26" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net46" />
